fix thread overflow on mobile

--- a/client/src/components/feeds/post/comments/ContextThread.css
+++ b/client/src/components/feeds/post/comments/ContextThread.css
@@ -53,8 +53,7 @@
   width: 0.1rem;
   height: 0.8rem;
   background-color: #ccc;
-  margin-top: 0.35rem;
-  margin-bottom: 0.5rem;
+  margin-top: 0.7rem;
   margin-left: 0.7rem;
 }
 
